# AlmostSfM

./: CMakeLists.txt  README.md
dataset_and_info/: README_SFM1B.md
executables/: CMakeLists.txt  structure_from_motion.cpp  test_bundle_adjustment.cpp  test_data_loading.cpp  test_icp_3d.cpp  test_init_translations.cpp  test_relative_pos.cpp  test_sicp_3d.cpp  test_triangulation.cpp
src/: bundle_adjustment.cpp  bundle_adjustment.h  evaluation.cpp  evaluation.h  icp_3d.cpp  icp_3d.h  init_translations.cpp  init_translations.h  relative_position_calculator.cpp  relative_position_calculator.h  sicp_3d.cpp  sicp_3d.h  triangulation.cpp  triangulation.h  utils.cpp  utils.h
